add queue for processing tasks, implement algorithm for classification